--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,14 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-    width: 3px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: #FF6764;
     border-radius: 6px;
+}
+
+.invert-icon {
+    filter: invert(85%);
 }
